// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditionName should initially render with an edition id 1`] = `
<div>
  
  <span>
    0f590113-9733-4446-abcd-a103d17a2063
  </span>
</div>
`;

exports[`EditionName should render and resolve an edition name 1`] = `
<div>
  <span>
    test-edition-name
  </span>
  
</div>
`;

exports[`EditionName should render with an edition id when edition fetch throws an error 1`] = `
<div>
  
  <span>
    0f590113-9733-4446-abcd-a103d17a2063
  </span>
</div>
`;
